# team_principal

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_create_teams_table.py  003_add_team_id_to_users.py  004_create_championships_table.py  005_create_championship_entries_table.py  006_create_races_table.py  007_create_race_entries_table.py  008_create_race_results_table.py  009_create_notifications_table.py  010_create_penalties_table.py  010_create_telemetry_tables.py  011_create_pitstops_strategies_tables.py  012_create_replay_tables.py
backend/app/: config.py  main.py
backend/app/auth/: router.py  schemas.py  service.py
backend/app/calendar/: __init__.py  router.py  schemas.py  service.py
backend/tests/: conftest.py  test_admin_create_user.py  test_auth.py  test_calendar.py  test_championship_entries.py  test_championship_standings.py  test_championships.py  test_dashboard.py  test_driver_standings.py  test_drivers.py  test_health.py  test_notifications.py  test_notifications_ws.py  test_penalties.py  test_penalty_dsq_sync.py  test_penalty_standings.py  test_permissions.py  test_pitstops.py  test_race_entries.py  test_race_results.py  test_races.py  test_rbac.py  test_replay.py  test_roles.py  test_standings_breakdown.py  test_team_members.py  test_teams.py  test_telemetry.py  test_uploads.py  test_user_roles.py  test_users.py
(+191 files in other folders)
